# incendios-florestais-brasil

./: .gitignore  LICENSE  README.md  linear_regression_model.pkl  model_results.csv  pyproject.toml  requirements.txt  run.bat  run.sh
.pytest_cache/v/cache/: lastfailed  nodeids
data/: amazonfire.csv  amazonfire.xlsx  amazonfire_edit.csv  test.csv
notebooks/: forest_fires_brazil.ipynb
src/: __init__.py  app.py  eda.py  main.py  model_trainer.py  plotly_plots.py  preprocess.py  utils.py
tests/: test_preprocess.py
